--- a/vignettes/geneticsCREVignette.Rmd
+++ b/vignettes/geneticsCREVignette.Rmd
@@ -10,7 +10,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-\(\indent\) \(\indent\) \(\indent\) \(\indent\) **geneticsCRE** is an R package that performs genome-wide association study pathway analysus (GWASPA) to identify statistically significant associations between variants on a gene regulatory pathways and a given phenotype. Unlike Genome-wide association study (GWAS), that seeks to assign statistical significance to associations of variations in single genes to a  phenotype, GWASPA accumulates statistical power by examining rare variant along gene-gene interaction pathways. GWASPA  uses prior causal information a gene regulatory interactions to infer statistically significant associations between causal pathways and a the phenotype. Given phenotype data with case/control information, **geneticsCRE** computes GWASPA for all valid pathways as identified by the Homo Sapien STRINGdb [1] causal network.
+\(\indent\) \(\indent\) \(\indent\) \(\indent\) **geneticsCRE** is an R package that performs genome-wide association study pathway analysus (GWASPA) to identify statistically significant associations between variants on gene regulatory pathways and a given phenotype. Unlike Genome-wide association study (GWAS), that seeks to assign statistical significance to associations of variations in single genes to a  phenotype, GWASPA accumulates statistical power by examining rare variant along gene-gene interaction pathways. GWASPA  uses prior causal information a gene regulatory interactions to infer statistically significant associations between causal pathways and a the phenotype. Given phenotype data with case/control information, **geneticsCRE** computes GWASPA for all valid pathways as identified by the Homo Sapien STRINGdb [1] causal network.
 
 ## Usage
 
